# g-stack-hackathon

./: .gitignore  IMPLEMENTATION.md  LIFECYCLE.md  README.md  ROLES.md  SPEC.md  conftest.py  pyproject.toml
agent-a/: CHUNKING.md  README.md  SCHEMA.md
agent-a/collector/: __init__.py  change_event.py  inbox_watcher.py  ingester.py  schema.py  server.py  sql_gate.py  transport.py  trust.py  warehouse.py
agent-a/tests/: test_binary_envelope.py  test_change_event.py  test_inbox_watcher.py  test_ingester.py  test_schema.py  test_sql_gate.py  test_trust.py  test_warehouse.py
agent-b/: README.md
agent-b/coach/: __init__.py  __main__.py  calendar_sync.py  client.py  gbrain_rollup.py  host_proactive.py  notify.py  proactive.py
docs/: index.html
gstack-ios/: BACKLOG.md  FRAMEWORK.md  LOOP.md  README.md  SKILL.md  install.sh
health-intelligence/: SKILL.md  build_index.py  example.py  requirements.txt  schema.py  server.py  tool_manifest.json
health-intelligence/data/: embed_cache.npz  health_metrics.json  prescriptive_papers.json
health-intelligence/retrieval/: __init__.py  embed.py  format.py  index.py  retrieve.py  ze_client.py
health-sync/: README.md  REFINEMENTS.md  project.yml
health-sync/HealthSync/: CalendarView.swift  (+29 more)
health-sync/HealthSync.xcodeproj/: project.pbxproj
health-sync/HealthSync.xcworkspace/: contents.xcworkspacedata
infra/: CLAW_HELPER.sh  README.md  REDEPLOY_GCP.md
pilot-swift/: .gitignore  Package.swift  README.md
scripts/: make_mock_envelopes.py  mock_health_pipeline.py  run_e2e.sh
tests/: helpers.py  test_coach.py
(+56 files in other folders)
