[project]
name = "g-stack-hackathon"
version = "0.1.0"
description = "g-stack: Pilot-spined personal data substrate. Workspace pyproject installing agent-a (Collector) + agent-b (Coach)."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "duckdb>=1.0",
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.140",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
collector = "collector.server:main"
coach = "coach.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent-a/collector", "agent-b/coach"]

[tool.hatch.build.targets.wheel.sources]
"agent-a/collector" = "collector"
"agent-b/coach" = "coach"

[tool.pytest.ini_options]
testpaths = ["tests", "agent-a/tests", "agent-b/tests"]
addopts = "-ra -q"
pythonpath = [".", "agent-a", "agent-b"]
